--- a/package.json
+++ b/package.json
@@ -69,11 +69,11 @@
     "react-tooltip": "^5.30.0",
     "socket.io-client": "^4.8.1",
     "uuid": "^13.0.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+	"typescript": "5.9.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
-    "typescript": "5.9.3"
   }
 }
