--- a/package.json
+++ b/package.json
@@ -74,6 +74,6 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.7",
+    "@types/react": "^19.2.7"
   }
 }
