--- a/package.json
+++ b/package.json
@@ -15,18 +15,14 @@
     "@ckeditor/ckeditor5-react": "^9.1.0",
     "@coreui/react": "^5.9.1",
     "@emotion/styled": "^11.14.1",
-    "@fortawesome/fontawesome-svg-core": "^7.1.0",
-    "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@fortawesome/react-fontawesome": "^3.1.1",
     "@hookform/resolvers": "^5.2.2",
     "@ipregistry/client": "^6.0.0",
-    "@mui/icons-material": "^7.3.5",
-    "@mui/material": "^7.3.5",
-    "@nivo/bar": "^0.99.0",
-    "@nivo/pie": "^0.99.0",
-    "@types/react-dom": "19.2.3",
+    "@mui/material": "^5.18.0",
+	"@mui/icons-material": "^5.18.0",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
     "ag-charts-react": "^12.3.1",
-    "apexcharts": "^5.3.6",
+    "apexcharts": "^4.0.0",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "crypto-js": "^4.2.0",
@@ -48,12 +44,10 @@
     "next": "^16.0.6",
     "number-to-words": "^1.2.4",
     "pdfjs-dist": "^5.4.449",
-    "react": "^19.2.0",
     "react-apexcharts": "^1.9.0",
     "react-avatar": "^5.0.4",
     "react-big-calendar": "^1.19.4",
     "react-datepicker": "^8.10.0",
-    "react-dom": "^19.2.0",
     "react-filepond": "^7.1.3",
     "react-files": "^3.0.3",
     "react-google-recaptcha-v3": "^1.11.0",
@@ -68,12 +62,14 @@
     "react-select": "^5.10.2",
     "react-tooltip": "^5.30.0",
     "socket.io-client": "^4.8.1",
+    "typescript": "5.9.3",
     "uuid": "^13.0.0",
     "yup": "^1.7.1",
-	"typescript": "5.9.3"
+	"react": "^18.2.0",
+"react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.7"
+    "@types/react": "^18.2.79"
   }
 }
